--- a/simple-erp-web-client/angular.json
+++ b/simple-erp-web-client/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
+              "./node_modules/bulma/bulma.sass"
             ],
             "scripts": []
           },
