--- a/simple-erp-web-client/angular.json
+++ b/simple-erp-web-client/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/styles.sass",
-              "./node_modules/bulma/bulma.sass"
+              "./node_modules/bulma/bulma.sass",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
